# SynCE

./: README.md  requirements.txt
artifacts/data/Patch-Camelyon/: class_mapping.csv  test.csv
artifacts/data/military_vehicles/: class_mapping.csv  test.csv  train.csv
artifacts/data/parasitic_egg/: class_mapping.csv  subset.csv  test.csv
artifacts/data/tanks/: class_mapping.csv  test.csv  train.csv
reproduced_works/CoRE/: .pre-commit-config.yaml
reproduced_works/CoRE/artifacts/data/circuits/: class_mapping.csv  train.csv
reproduced_works/CoRE/artifacts/data/ham10000/: test.csv
reproduced_works/CoRE/artifacts/data/inaturalist/: class_mapping_common.csv  test.csv
reproduced_works/CoRE/src/core/: core.py  core_txt2txt_retrieval.py  core_zeroshot_from_retrieved.py
reproduced_works/CoRE/src/data/: retrieval_dataset.py
reproduced_works/CoRE/src/preprocessing/: cc12m_mistral.py
reproduced_works/WDYS/: README.md
src/: img2txt_fewshot_generation.py  synce.py  synce_uniform.py  txt2txt_generation.py
submodules/CoRE/: Makefile  README.md  pyproject.toml  requirements.txt
submodules/CoRE/artifacts/data/circuits/: test.csv
submodules/CoRE/artifacts/data/ham10000/: class_mapping.csv  train.csv
submodules/CoRE/artifacts/data/inaturalist/: class_mapping.csv  train.csv
submodules/CoRE/src/: retrieval_database.py
submodules/CoRE/src/core/: core_img2txt_retrieval.py
submodules/CoRE/src/preprocessing/: cc12m_siglip.py  coyo_mistral.py  coyo_siglip.py
utils/: param_heatmap.py  simple_classification.py  synce_patch-camelyon.py  tsne_visualization.py
utils/perceptionEncoder/: new_pe_fusion.py
