[project]
name = "core"
version = "0.1.0"
description = "Official code release for the EMNLP 2024 paper."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.3.0",
    "transformers==4.41.2",
    "tokenizers==0.19.1",
    "sentencepiece==0.2.0",
    "accelerate==0.29.2",
    "peft==0.10.0",
    "pydantic==2.6.4",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "requests==2.31.0",
    "einops==0.7.0",
    "einops-exts==0.0.4",
    "timm>=0.9.16",
    "wandb==0.16.6",
    "open-clip-torch==2.24.0",
    "rootutils==1.0.7",
    "hydra-core==1.3.2",
    "torchmetrics==1.3.2",
    "clip",
    "rich==13.7.1",
    "pandas==2.2.1",
    "fairscale==0.4.4",
    "scipy==1.10.1",
    "faiss-cpu==1.8.0",
    "datasets==2.14.7",
]

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true

[tool.flit.module]
name = "src"

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "train: tests that train models",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.bandit]
skips = ["B311"]

[tool.codespell]
ignore-words-list = "wit"

[tool.uv]
dev-dependencies = [
    "pre-commit",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
